Added some some helpers for MySQL, added some tests.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,12 @@ language: csharp
 
 sudo: false  # use the new container-based Travis infrastructure
 
+services:
+  - mysql
+
+before_script:
+  - mysql -e "CREATE USER 'nunit'@'localhost' IDENTIFIED BY 'jkYjgeriE8EIEIPrJNb8';" -uroot
+  - mysql -e "GRANT ALL PRIVILEGES ON nunit_db.* TO 'nunit'@'localhost';" -uroot
+
 script: 
   - ./build.sh All
