--- a/src/test/Test.Yaaf.Database.MySQL/app.config
+++ b/src/test/Test.Yaaf.Database.MySQL/app.config
@@ -7,7 +7,10 @@
         <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     </configSections>
     <connectionStrings>
-        <add name="Test_MSSQL" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\test.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+        <!--
+        GRANT ALL PRIVILEGES ON nunit_db.* To 'nunit'@'localhost' IDENTIFIED BY 'jkYjgeriE8EIEIPrJNb8';
+    -->
+        <add name="Test_MySQL" connectionString="Server=localhost;Database=nunit_db;Uid=nunit;Pwd=jkYjgeriE8EIEIPrJNb8" providerName="MySql.Data.MySqlClient" />
     </connectionStrings>
 
     <entityFramework>
@@ -17,6 +20,7 @@
             </parameters>
         </defaultConnectionFactory>
         <providers>
+            <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6" />
             <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
         </providers>
     </entityFramework>
