--- a/src/test/Test.Yaaf.Database.MySQL/app.config
+++ b/src/test/Test.Yaaf.Database.MySQL/app.config
@@ -38,8 +38,24 @@
                 <bindingRedirect oldVersion="4.3.0.0" newVersion="4.3.1.0" />
             </dependentAssembly>
             <dependentAssembly>
-                <assemblyIdentity name="Ninject" publicKeyToken="c7192dc5380945e7" culture="neutral" />
-                <bindingRedirect oldVersion="0.0.0.0-3.2.0.0" newVersion="3.0.0.0" />
+                <assemblyIdentity name="EntityFramework" publicKeyToken="b77a5c561934e089" culture="neutral" />
+                <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+            </dependentAssembly>
+            <dependentAssembly>
+                <assemblyIdentity name="MySql.Data" publicKeyToken="c5687fc88969c44d" culture="neutral" />
+                <bindingRedirect oldVersion="0.0.0.0-6.8.3.0" newVersion="6.8.3.0" />
+            </dependentAssembly>
+            <dependentAssembly>
+                <assemblyIdentity name="System.Data.SQLite.Linq" publicKeyToken="db937bc2d44ff139" culture="neutral" />
+                <bindingRedirect oldVersion="0.0.0.0-1.0.92.0" newVersion="1.0.92.0" />
+            </dependentAssembly>
+            <dependentAssembly>
+                <assemblyIdentity name="System.Data.SQLite.EF6" publicKeyToken="db937bc2d44ff139" culture="neutral" />
+                <bindingRedirect oldVersion="0.0.0.0-1.0.92.0" newVersion="1.0.92.0" />
+            </dependentAssembly>
+            <dependentAssembly>
+                <assemblyIdentity name="System.Data.SQLite" publicKeyToken="db937bc2d44ff139" culture="neutral" />
+                <bindingRedirect oldVersion="0.0.0.0-1.0.92.0" newVersion="1.0.92.0" />
             </dependentAssembly>
         </assemblyBinding>
     </runtime>
